--- a/docket-agent/Jenkinsfile
+++ b/docket-agent/Jenkinsfile
@@ -5,7 +5,7 @@ Pipleline {
      stages {
         stage (build) {
           steps {
-            sh ( node --version) }
+            sh 'node --version' }
         }
      }
   }
