--- a/docket-agent/Jenkinsfile
+++ b/docket-agent/Jenkinsfile
@@ -1,9 +1,9 @@
-Pipleline {
+pipleline {
   agent {
     docker { image 'node:20.11.1-alpine3.19' }
 
      stages {
-        stage (build) {
+        stage ('Test') {
           steps {
             sh 'node --version' }
         }
